# MyToDo

./: CMakeLists.txt  Main.qml  main.cpp  resource.qrc
src/cpp/: macos.h  macos.mm  main.cpp  my_todo_ui_controller.cpp  my_todo_ui_controller.h
src/qml/: Main.qml
src/qml/content/: MainContent.qml
src/qml/core/: RCircleButton.qml  RCircularCheckBox.qml  RMoveArea.qml
src/qml/menu/: MainMenu.qml  MainMenuItem.qml
